--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,6 +145,14 @@
                 android:text="Question"/>
         </RadioGroup>
 
+        <!-- Submit results button -->
+        <Button
+            android:id="@+id/button_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Submit"/>
+
     </LinearLayout>
 
 </ScrollView>
