2 add TextWatcher, EditText reference for question three, add method afterTextChanged() to verify if text input is correct. Confirm that new EditText field works

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,7 @@
             android:text="A(n) ______ is a single, focused thing that a user can do."/>
 
         <EditText
+            android:id="@+id/et_question_three"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
