--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/activity_vertical_margin"
+    android:layout_marginRight="@dimen/activity_vertical_margin"
     tools:context="com.example.namlu.jeopardyandroidedition.MainActivity">
 
     <!-- ViewGroup for all quiz items -->
@@ -17,10 +19,13 @@
 
         <!-- Question 1 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:text="Question #1"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="It is used to create child views to represent the parent view items."/>
@@ -57,10 +62,12 @@
 
         <!-- Question 2 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Question #2"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Android supports these languages for application development."/>
@@ -97,17 +104,19 @@
 
         <!-- Question 3 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Question #3"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="A(n) ______ is a single, focused thing that a user can do."/>
 
         <EditText
             android:id="@+id/et_question_three"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/edit_text_width"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:hint="Enter your answer"/>
@@ -116,10 +125,12 @@
 
         <!-- Question 4 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Question #4"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="A class which can create only an object, which is shareable to all other classes."/>
@@ -151,12 +162,16 @@
                 android:text="String"/>
         </RadioGroup>
 
+        <View style="@style/Divider"/>
+
         <!-- Question 5 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Question #5"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="These are key components to the Android Architecture."/>
@@ -193,27 +208,31 @@
 
         <!-- Question 6 -->
         <TextView
+            style="@style/HeadingQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Question #6"/>
         <TextView
+            style="@style/TextQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="A(n) ______ is a simple message object which is used to communicate from one activity to another."/>
 
         <EditText
             android:id="@+id/et_question_six"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/edit_text_width"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:hint="Enter your answer"/>
 
+        <View style="@style/Divider"/>
+
         <!-- Submit results button -->
         <Button
             android:id="@+id/button_submit"
+            style="@style/Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="Submit"/>
 
     </LinearLayout>
