--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#B47AEA</color>
+    <color name="colorPrimaryDark">#8359AB</color>
+    <color name="colorAccent">#65D08F</color>
+    <color name="primary_dark">#51A673</color>
+
+    <!-- Text Colors -->
+    <color name="text_primary">@color/black_87</color>
+    <color name="text_secondary">@color/black_54</color>
+    <color name="text_hint">@color/black_26</color>
+
+    <!-- Colors -->
+    <color name="white_primary">#F9F9F9</color>
+    <color name="white_primary_54">#79F9F9F9</color>
+    <color name="black_87">#DD000000</color>
+    <color name="black_54">#79000000</color>
+    <color name="black_26">#3A000000</color>
+    <color name="black_12">#1B000000</color>
+    <color name="dark_gray">#3C3C3C</color>
 </resources>
